crypsend logo, landing font changing, small layout bugfixes

--- a/public/assets/css/landing.css
+++ b/public/assets/css/landing.css
@@ -172,9 +172,8 @@ main {
     width: 100vw;
     height: auto;
     text-align: center;
-    font-size: 3.2rem;
-    font-family: 'Quicksand', serif;
-    font-weight: bolder;
+    font-size: 3.4rem;
+    font-family: 'Comfortaa', serif;
     color: white;
     z-index: 3;
     left: 0;
@@ -184,6 +183,7 @@ main {
 }
 
 .main-section-subtitle {
+    font-family: "Comfortaa Light", sans-serif;
     font-size: 1.1rem;
     font-weight: normal;
     display: block;
@@ -196,7 +196,7 @@ main {
 
     .main-section-title {
         top: calc(77.2vh / 2);
-        font-size: 2.3rem;
+        font-size: 2.5rem;
         padding-left: 2rem;
         padding-right: 2rem;
 
@@ -211,7 +211,7 @@ main {
     }
 
     .main-section-subtitle {
-        font-size: 1.5rem;
+        font-size: 1.2rem;
 
     }
 
@@ -301,7 +301,7 @@ main {
 .section-first-header {
     background-color: #1E1E1E;
     color: white;
-    font-family: Quicksand, serif;
+    font-family: Comfortaa, serif;
     font-size: 1.7rem;
     padding: 1rem 1rem 3rem;
     font-weight: bolder;
@@ -313,7 +313,7 @@ main {
 .section-first-content {
     color: #495F7F;
     font-size: 1rem;
-    font-family: "Quicksand Light", serif;
+    font-family: "Comfortaa Light", serif;
     padding: 1rem;
     text-align: center;
 
@@ -324,7 +324,7 @@ main {
 .section-first-table {
     box-sizing: border-box;
     padding-left:1rem;
-    margin-top:5rem;
+    margin-top:6.4rem;
     /*border: solid 1px hotpink;*/
 
 
@@ -371,25 +371,33 @@ section {
     color: #3A3A3A;
     text-align: center;
 
-    font-family: "Quicksand Medium", serif;
+    font-family: "Comfortaa", serif;
 
 }
 
 
 
+
 .section-content {
-    color: #495F7F;
-    font-size: 1rem;
-    font-family: "Quicksand Light", serif;
+    color: #41464C;
+    font-size: .9rem;
+    line-height: 1.8;
+    font-family: "Comfortaa Light", serif;
 
     text-align: center;
     margin-top: 2rem;
     margin-bottom:2rem;
     box-sizing: border-box;
     height: auto;
+}
 
+.section-content a {
+    color:#0f3c4b;
+    font-weight: bolder;
+    text-decoration: underline;
 
 }
+
 
 .section-img img {
 
@@ -415,7 +423,7 @@ section {
 }
 
 .web-crypto-svg {
-    max-width: 150px !important;
+    /*max-width: 150px !important;*/
     padding-top:5rem !important;
 }
 
@@ -493,7 +501,7 @@ section {
  }
 
 .cross-browser-title {
-    font-family: "Quicksand Light", serif;
+    font-family: "Comfortaa Light", serif;
     font-weight: bold;
     font-size: 1.2rem;
     color: #333333;
@@ -573,7 +581,7 @@ section {
 
 footer {
     margin-top: 4rem;
-    font-family: "Quicksand", serif;
+    font-family: "Comfortaa", serif;
     background-color: #1E1E1E;
     display: inline-block;
     float: left;
